--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-git+git://github.com/scottkmaxwell/paramiko.git@ae078f51d622931954e47e78029a889c4e721a05
-nose==1.3.0
+ecdsa==0.13
+nose==1.3.6
+paramiko==1.15.2
+pycrypto==2.6.1
+wheel==0.24.0
